--- a/views/new.erb
+++ b/views/new.erb
@@ -1,3 +1,6 @@
 <h2>Add New Post</h2>
 
-<p>We will add new post here</p>
+<form action="/new" method="POST">
+	<textarea name="content" class="form-control" rows="6" placeholder="Type post text here"></textarea><br />
+	<button type="submit" class="btn btn-primary">Submit</button>
+</form>
