--- a/views/details.erb
+++ b/views/details.erb
@@ -8,6 +8,12 @@
 <br />
 
 <h4>Comments:</h4>
+<% @comments.each do |comment| %>
+	<p>
+		<%= comment['comment'] %><br />
+		Creared at: <%= comment['created_date'] %><br />
+	</p>
+<% end %>
 <form action="/post/<%= @row['id'] %>" method="POST">
 	<textarea name="comment" class="form-control" rows="6" placeholder="Type comment text here"></textarea><br />
 	<button type="submit" class="btn btn-primary">Add comment</button>
